--- a/public/style.css
+++ b/public/style.css
@@ -49,7 +49,7 @@ table {
   height: 150px;
   overflow: auto;
   margin-top: 20px;
-  background: #eeeeee;
+  background: #ececec;
   text-align: center;
 }
 
@@ -65,4 +65,57 @@ th {
 
 td {
   font-size: 2rem;
+}
+
+nav {
+  background-color: #ececec;
+  display: flex;
+  height: auto;
+  margin-right: auto;
+  margin-left: auto;
+  border-bottom: 1px solid #3f3f3f;
+  align-items: center;
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+nav > h2 {
+  color: #222;
+  text-decoration: none;
+  padding: 5px 8px;
+  opacity: 0.85;
+  letter-spacing: 0.3px;
+  text-align: center;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &:not(:last-child) {
+    margin-right: 5px;
+  }
+
+  @include media-query($on-mobile) {
+    opacity: 0.8;
+  }
+}
+
+nav > a {
+  color: #222;
+  text-decoration: none;
+  padding: 5px 8px;
+  opacity: 0.85;
+  letter-spacing: 0.3px;
+  text-align: center;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &:not(:last-child) {
+    margin-right: 5px;
+  }
+
+  @include media-query($on-mobile) {
+    opacity: 0.8;
+  }
 }
