--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,8 @@
     <nav>
         <h1>Attack Map</h1>
         <a>Attacks today: <%- loc.length %></a>
-        <a href="https://edwin.computer">Home page</a>
-        <a href="https://map.edwin.computer/globe">Globe Visualization</a>
+        <a href="https://notedwin.tech">Home page</a>
+        <a href="https://map.notedwin.tech/globe">Globe Visualization</a>
     </nav>
 
 
