use lambda endpoint

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,6 @@
         var lineDrawTime = 850;
 
         // hard coded: Chicago
-        var server = [{ latitude: 41.84, longitude: -87.64 }, { latitude: 39.04, longitude: -77.47 }];
 
         var loc = <%- JSON.stringify(loc) %>;
         //basic map config with custom fills, mercator projection
@@ -86,7 +85,6 @@
             delete user_ip_time[index].port;
             delete user_ip_time[index].lat;
             delete user_ip_time[index].lon;
-            delete user_ip_time[index].dest;
         }
 
         document.body.appendChild(buildHtmlTable(user_ip_time));
@@ -129,7 +127,7 @@
                 arcs.pop();
                 bubbles.pop();
                 bubbles.pop();
-                var { user, ip, port, lon, lat, time, dest } = loc[i]; //add time
+                var { user, ip, port, lon, lat, time } = loc[i]; //add time
                 //once parsed
 
                 arcs.push({
@@ -138,7 +136,7 @@
                         longitude: lon
                     },
                     destination: {
-                        latitude: server[dest].latitude, longitude: server[dest].longitude
+                        latitude: 41.84, longitude: -87.64
                     }
                 });
 
@@ -146,7 +144,7 @@
 
                 bubbles.push({ user: user, port: port, ip: ip, latitude: lat, longitude: lon, radius: 5 , fillKey: 'black'});
 
-                bubbles.push({ user: "edwin", port: "22", ip: 'localhost', latitude: server[dest].latitude, longitude: server[dest].longitude, radius: 5, fillKey: 'black'});
+                bubbles.push({ user: "edwin", port: "22", ip: 'localhost', latitude: 41.84, longitude: -87.64, radius: 5, fillKey: 'black'});
 
                 map.arc(arcs, { strokeWidth: 5, strokeColor: rand });
                 map.bubbles(bubbles, {
